website/versioned_docs/version-2.0.0-alpha.10/react-native.globaljsoncontainerstorage.md
---
id: version-2.0.0-alpha.10-react-native.globaljsoncontainerstorage
title: GlobalJSONContainerStorage class
hide_title: true
original_id: react-native.globaljsoncontainerstorage
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## GlobalJSONContainerStorage class


<b>Signature:</b>

```typescript
export declare class GlobalJSONContainerStorage implements ContainerStorage 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(driver)](./react-native.globaljsoncontainerstorage._constructor_.md) |  | Constructs a new instance of the <code>GlobalJSONContainerStorage</code> class |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [delAccessToken(namespace)](./react-native.globaljsoncontainerstorage.delaccesstoken.md) |  |  |
|  [delIdentity(namespace)](./react-native.globaljsoncontainerstorage.delidentity.md) |  |  |
|  [delOAuthRedirectAction(namespace)](./react-native.globaljsoncontainerstorage.deloauthredirectaction.md) |  |  |
|  [delUser(namespace)](./react-native.globaljsoncontainerstorage.deluser.md) |  |  |
|  [getAccessToken(namespace)](./react-native.globaljsoncontainerstorage.getaccesstoken.md) |  |  |
|  [getIdentity(namespace)](./react-native.globaljsoncontainerstorage.getidentity.md) |  |  |
|  [getOAuthRedirectAction(namespace)](./react-native.globaljsoncontainerstorage.getoauthredirectaction.md) |  |  |
|  [getUser(namespace)](./react-native.globaljsoncontainerstorage.getuser.md) |  |  |
|  [setAccessToken(namespace, accessToken)](./react-native.globaljsoncontainerstorage.setaccesstoken.md) |  |  |
|  [setIdentity(namespace, identity)](./react-native.globaljsoncontainerstorage.setidentity.md) |  |  |
|  [setOAuthRedirectAction(namespace, oauthRedirectAction)](./react-native.globaljsoncontainerstorage.setoauthredirectaction.md) |  |  |
|  [setUser(namespace, user)](./react-native.globaljsoncontainerstorage.setuser.md) |  |  |

